--- a/client/src/components/App/App.scss
+++ b/client/src/components/App/App.scss
@@ -13,6 +13,19 @@
   --color-bg: white;
   --color-accent-bg: #b7fbe2;
 }
+
+button {
+  background-color: var(--color-accent-b);
+  border: none;
+  color: white;
+  font-size: 1rem;
+  padding: 0.5rem;
+  cursor: pointer;
+  &:hover {
+    background-color: var(--color-accent-c);
+    color: var(--color-text);
+  }
+}
 .appContainer {
   display: flex;
   flex-direction: column;
@@ -20,6 +33,12 @@
 }
 main {
   max-width: 800px;
+  width: 100%;
+  padding: 1rem;
+  display: flex;
+  flex-direction: column;
+  align-items: stretch;
+  // width: min(100%, 800px);
 }
 .topBar {
   align-self: stretch;
@@ -38,41 +57,96 @@ main {
       text-decoration: none;
       font-size: 1rem;
       padding: 0.5rem;
+      display: flex;
+      align-items: center;
+      gap: 0.125rem;
       &:hover {
         background-color: white;
+        .bookshelf-counter {
+          color: white;
+        }
       }
     }
     .active {
       text-decoration: underline;
       font-weight: bold;
     }
-    button {
-      background-color: var(--color-accent-b);
-      border: none;
-      color: white;
-      font-size: 1rem;
-      padding: 0.5rem;
-      cursor: pointer;
-    }
   }
 }
 
-main {
-  padding: 2rem;
-}
-
-.book-list {
-  list-style: none;
-  padding-left: 0;
+.bookshelf-container {
   display: flex;
   flex-direction: column;
   gap: 1rem;
+}
+.book-list-container {
+  background-color: var(--color-accent-bg);
+  border: 2px solid var(--color-accent-b);
+  padding: 0;
+  > h3 {
+    background-color: var(--color-accent-b);
+    color: white;
+    padding: 0.5rem 1rem;
+    margin: 0;
+  }
+}
+.book-list {
+  list-style: none;
+  padding-left: 0;
+  padding: 1rem;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  margin: 0;
   li {
-    border: 2px solid var(--color-accent-b);
+    background-color: white;
+    box-shadow: 0 0 5px 0 rgba(0, 0, 0, 0.5);
+    // border: 2px solid var(--color-accent-b);
     padding: 1rem;
   }
 }
+.description {
+  flex-grow: 1;
+  flex-shrink: 1;
+  flex-basis: 400px;
+}
 .book-thumbnail {
   display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
   gap: 1rem;
+  .description {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: stretch;
+  }
+}
+.book-controls {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  gap: 1rem;
+  flex-wrap: wrap;
+}
+.book-controls-move {
+  display: flex;
+  gap: 1rem;
+}
+
+.search {
+  > input {
+    width: 100%;
+    padding: 0.5rem;
+    font-size: 1rem;
+  }
+}
+
+.bookshelf-counter {
+  font-size: 0.75rem;
+  color: var(--color-accent-a);
+  background-color: black;
+  padding: 0.125rem 0.25rem;
+  border-radius: 0.25rem;
 }
