--- a/client/src/components/App/App.scss
+++ b/client/src/components/App/App.scss
@@ -9,6 +9,7 @@
   --color-text: black;
   --color-accent-c: #07f2b9;
   --color-accent-b: #4555ff;
+  --color-accent-b-transparent: #4555ffc3;
   --color-accent-a: #08cff8;
   --color-bg: white;
   --color-accent-bg: #b7fbe2;
@@ -114,25 +115,52 @@ main {
 .book-thumbnail {
   display: flex;
   align-items: center;
+  justify-content: center;
   flex-wrap: wrap;
   justify-content: stretch;
-  gap: 1rem;
+  position: relative;
+  .thumbnail-image-link {
+    position: relative;
+    &::after {
+      background-color: var(--color-accent-b-transparent);
+      color: white;
+      opacity: 0;
+      content: "view book";
+      display: flex;
+      position: absolute;
+      left: 1rem;
+      top: 1rem;
+      right: 0;
+      bottom: 1rem;
+      align-items: center;
+      justify-content: center;
+      transition: all 0.2s;
+    }
+    &:hover {
+      &::after {
+        opacity: 1;
+        transition: all 0.2s;
+      }
+    }
+  }
   img {
     width: 128px;
 
     padding: 1rem 0rem 1rem 1rem;
   }
   .description {
-    padding: 1rem 0rem;
+    padding: 1rem;
     display: flex;
+    flex-grow: 10;
     flex-direction: column;
     justify-content: space-between;
     align-items: stretch;
   }
   .thumbnail-link {
-    padding: 1rem;
+    padding: 0.5rem;
     align-self: stretch;
     display: flex;
+    flex-grow: 1;
     align-items: center;
     justify-content: center;
     text-decoration: none;
@@ -158,10 +186,14 @@ main {
 }
 .book-controls-move {
   display: flex;
+  flex-wrap: wrap;
   gap: 1rem;
 }
 
 .search {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
   > input {
     width: 100%;
     padding: 0.5rem;
@@ -210,4 +242,7 @@ main {
   align-items: center;
   justify-content: center;
   text-align: center;
+  margin-left: 1rem;
+  margin-top: 1rem;
+  margin-bottom: 1rem;
 }
