--- a/client/src/components/App/App.scss
+++ b/client/src/components/App/App.scss
@@ -8,7 +8,21 @@
 * {
   font-family: "Space Grotesk", sans-serif;
 }
-
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  margin-top: 0.5em;
+  margin-bottom: 0.25em;
+}
+p {
+  margin-bottom: 0.5em;
+}
+ul {
+  margin-top: 0.5em;
+}
 :root {
   font-size: 16px;
   --color-text: black;
