increases size of h1

--- a/client/src/components/App/App.scss
+++ b/client/src/components/App/App.scss
@@ -17,6 +17,9 @@ h6 {
   margin-top: 0.5em;
   margin-bottom: 0.25em;
 }
+h1 {
+  font-size: 2rem;
+}
 p {
   margin-bottom: 0.5em;
 }
@@ -226,7 +229,7 @@ main {
   background-color: black;
   padding: 0.25rem 0.5rem;
   border-radius: 1rem;
-  margin-left: 0.125rem;
+  margin-left: 0.25rem;
   font-weight: bold;
   letter-spacing: 0.1em;
 }
